# staggered-update-recursive-neural-net

./: .gitignore  activation.py  crnn.py  layers.py  main.py  neural_net.py  neuron.py  notebook.ipynb  pyproject.toml  training.py
