[tool.poetry]
authors = ["Sam Haygood"]
description = "Staggered Update Recursive Neural Net"
name = "staggered-update-recursive-neural-net"
packages = [{include = "staggered_update_recursive_neural_net"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
matplotlib = "^3.8.2"
numpy = "^1.26.4"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
jupyter-client = "^8.6.0"
pylance = "^0.9.15"
mypy = "^1.8.0"
jupyter = "^1.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
